[package]
name = "opm"
version = "0.1.0"
authors = ["Thomas Crowley <crowley@kibu.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
log = { version = "0.4.8"}

[lib]
name = "opm"
crate-type = ["dylib"]
path = "src/lib.rs"